--- a/_posts/0000-01-02-rmlazier.md
+++ b/_posts/0000-01-02-rmlazier.md
@@ -1,6 +1,6 @@
 ---
 layout: slide
-title: "Welcome to our second slide!"
+title: "Welcome to rmlazier's slide!"
 ---
 This is githubrml's slide"
 Use the left arrow to go back!
