--- a/_posts/0000-01-02-rmlazier.md
+++ b/_posts/0000-01-02-rmlazier.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to rmlazier's slide!"
 ---
-This is githubrml's slide"
+This is my awesome slide"
 Use the left arrow to go back!
